--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
+    "format": "npm run prettier -- --write",
+    "check-format": "npm run prettier -- --list-different",
     "test": "test"
   },
   "repository": {
@@ -15,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/gkatai/cat-browser/issues"
   },
-  "homepage": "https://github.com/gkatai/cat-browser#readme"
+  "homepage": "https://github.com/gkatai/cat-browser#readme",
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  }
 }
