--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/babel-preset-css-prop": "^11.0.0",
     "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1"
