--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "webpack": "^5.15.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
