--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@testing-library/react": "^11.2.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
     "eslint-loader": "^4.0.2",
