--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "lint": "eslint --ignore-path .gitignore .",
-    "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
+    "lint": "eslint --ignore-path .gitignore \"**/*.+(js|jsx)\"",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|jsx|json)\"",
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --list-different",
     "validate": "npm-run-all --parallel check-format test lint",
@@ -33,7 +33,6 @@
     "@testing-library/react": "^11.2.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.22.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
