--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/react": "^11.2.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
@@ -38,6 +40,7 @@
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "react-refresh": "^0.9.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
