--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "eslint-plugin-react": "^7.22.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "msw": "^0.25.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "whatwg-fetch": "^3.5.0"
   },
   "dependencies": {
     "@emotion/react": "^11.1.4",
